# concealed-object-detection

./: .gitignore  README.md  pyproject.toml
data/splits/: data.yaml
notebooks/: 2_preprocessing.ipynb  3_model_training.ipynb
results/models/: .config_model
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml  results.csv
src/data_processing/: dataspliter.py  preprocess.py
src/training/: evaluate.py  train.py
src/utils/: txt_async_reader.py
