[project]
name = "classificationwithtransferlearning"
version = "0.1.0"
description = ""
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "ultralytics (==8.3.139)",
    "scikit-learn (==1.6.1)",
    "aiofiles (==24.1.0)",
]

[tool.poetry]
packages = [{include = "classificationwithtransferlearning", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipython = "8.4.0"
labelimg = "^1.8.6"
pyqt5 = "^5.15.11"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
